edu/sample-apps/flaskapp-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: alwflaskapp
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: alwflaskapp
        tier: frontend
    spec:
      containers:
      - name: alwflaskapp
        image: albertwo/alwflaskapp:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
      nodeSelector:
        services: frontend # move out of frontend pool when additional backend agent nodes added
