edu/sample-apps/nodeapp-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: nodeapp
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
        tier: frontend
    spec:
      containers:
      - name: nodeapp
        image: gcr.io/albertwo/alwnodeapp
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
      nodeSelector:
        services: frontend # move out of frontend pool when additional backend agent nodes added
