edu/sample-apps/flaskapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # modified to route through ingress
  type: ClusterIP
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: guestbook
    tier: frontend
